internal/xds/translator/testdata/readylistener/ipv4.yaml
address:
  socketAddress:
    address: 0.0.0.0
    portValue: 19001
bypassOverloadManager: true
filterChains:
- filters:
  - name: envoy.filters.network.http_connection_manager
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
      httpFilters:
      - name: envoy.filters.http.health_check
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.http.health_check.v3.HealthCheck
          headers:
          - name: :path
            stringMatch:
              exact: /ready
          passThroughMode: false
      - name: envoy.filters.http.router
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          suppressEnvoyHeaders: true
      httpProtocolOptions:
        acceptHttp10: true
        defaultHostForHttp10: ready.gateway.envoyproxy.io
      routeConfig:
        name: ready_route
        virtualHosts:
        - domains:
          - '*'
          name: ready_route
          routes:
          - directResponse:
              status: 500
            match:
              prefix: /
      statPrefix: eg-ready-http
name: envoy-gateway-proxy-ready-0.0.0.0-19001
